--- a/build.gradle
+++ b/build.gradle
@@ -7,21 +7,32 @@
  * user guide available at https://docs.gradle.org/2.7/userguide/tutorial_java_projects.html
  */
 
+// customs plugins
+buildscript {
+    repositories { jcenter() }
+    dependencies {
+        // fatJar with dependencies
+        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.2'
+    }
+}
 
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'eclipse'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 
 mainClassName='iut.k2.gui.GameLoop'
+version = '2.0'
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
-version = '1.0'
 
 jar {
     manifest {
-        attributes 'Main-Class': mainClassName
+        attributes 'Implementation-Title': 'Angry birds',
+                'Main-Class': mainClassName,
+                'Implementation-Version': version
     }
 }
 
@@ -36,13 +47,12 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     // compile 'org.slf4j:slf4j-api:1.7.12'
+
+
     compile 'com.google.code.findbugs:jsr305:3.0.0'
     compile 'com.google.guava:guava:18.0'
 
-    // Declare the dependency for your favourite test framework you want to use in your tests.
-    // TestNG is also supported by the Gradle Test task. Just change the
-    // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
-    // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
+
 }
 
