--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 
